--- a/app.wxss
+++ b/app.wxss
@@ -1,21 +1,21 @@
 /**app.wxss**/
 @import 'venders/weui';
-.container {
+/* .container {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-   /* padding: 200rpx 0; */
+    padding: 200rpx 0; 
   box-sizing: border-box;
-} 
-/* page {
+}  */
+page {
   width: 100%;
   height: 100%;
   background-color: #f3f3f3;
   font-size: 28rpx;
   color: #666;
-} */
+}
 
 /*搜索框*/
 .searchbar-result {
