--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -9,7 +9,9 @@ height: 350rpx;
   width: 100%;
   height: 100%;
 } */ 
-
+page{
+  background-color: #fff;
+}
 /*首页自行车图片*/
 .zixinche{
   width: 100%;
