--- a/pages/cart/cart.wxss
+++ b/pages/cart/cart.wxss
@@ -1,106 +1,141 @@
 .cart_list {
-  margin-bottom: 104rpx;
+    margin-bottom: 104rpx;
 }
 
+
 /* 列表 */
-.weui-cell__hd>image{
-  width:20px;height:20px;margin-right:5px;
-  
+
+.weui-cell__hd>image {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
 }
-.list{
+
+.list {
     position: relative;
-   width: 100%;
+    width: 100%;
     height: 185rpx;
     background-color: #fff;
     border-bottom: 1rpx solid #e9e9e9;
 }
+
+
 /* 编辑 */
-.edit{
-  position: relative;
-  width: 100%;
-  height: 80rpx;
-  line-height: 80rpx;
-  background-color: #f6f6f6;
+
+.edit {
+    position: relative;
+    width: 100%;
+    height: 80rpx;
+    line-height: 80rpx;
+    background-color: #f6f6f6;
 }
+
+
 /* 删除 */
-.dele_edit{
-  position: absolute;
-  width: 40rpx;
-  height: 40rpx;
-  right: 30rpx;
-  bottom: 25rpx;
-  color:red;
+
+.dele_edit {
+    position: absolute;
+    width: 40rpx;
+    height: 40rpx;
+    right: 30rpx;
+    bottom: 25rpx;
+    color: red;
 }
+
+
 /* 编辑标题 */
-.edit_btn{
-  position: absolute;
-  font-size: 26rpx;
-  color: #888;
-  right: 30rpx;
+
+.edit_btn {
+    position: absolute;
+    font-size: 26rpx;
+    color: #888;
+    right: 30rpx;
 }
+
+
 /* 单选状态 */
-.radio_chek{
+
+.radio_chek {
     position: absolute;
     left: 30rpx;
     top: 70rpx;
     width: 40rpx;
     height: 40rpx;
-    color:#ff5555
+    color: #ff5555
 }
+
+
 /* 列表商品图片 */
-.list_img{
+
+.list_img {
     position: absolute;
     top: 20rpx;
     left: 100rpx;
     width: 144rpx;
     height: 144rpx;
 }
+
+
 /* 列表规格 */
-.cart_g_name{
-  position: absolute;
-  left: 280rpx;
-  font-size: 26rpx;
-  color: #aaa;
-  top: 75rpx;
-}
-/* 收藏 */
-.collert{
-  position: absolute;
-  font-size: 28rpx;
-  right: 40rpx;
- top: 30rpx;
-}
-/* 收藏图标 */
-.collert_img{
-  position: relative;
-  top: 2rpx;
-width: 28rpx;
-height: 28rpx;
+
+.cart_g_name {
+    position: absolute;
+    left: 280rpx;
+    font-size: 26rpx;
+    color: #aaa;
+    top: 75rpx;
 }
 
+
+/* 收藏 */
+
+.collert {
+    position: absolute;
+    font-size: 28rpx;
+    right: 40rpx;
+    top: 30rpx;
+}
+
+
+/* 收藏图标 */
+
+.collert_img {
+    position: relative;
+    top: 2rpx;
+    width: 28rpx;
+    height: 28rpx;
+}
+
+
 /* 列表商品名称 */
-.list_name{
-  position: absolute;
-  left: 280rpx;
-  top: 30rpx;
-  width: 300rpx;
-  /* background-color: red; */
+
+.list_name {
+    position: absolute;
+    left: 280rpx;
+    top: 30rpx;
+    width: 300rpx;
+    /* background-color: red; */
     font-size: 30rpx;
-    overflow: hidden;    
-text-overflow:ellipsis;    
-white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
+
+
 /* 列表商品价格 */
- .list_price{
-position: absolute;
-font-size: 28rpx;
-color:  #ff5555;
-left: 280rpx;
-bottom: 20rpx;
+
+.list_price {
+    position: absolute;
+    font-size: 28rpx;
+    color: #ff5555;
+    left: 280rpx;
+    bottom: 20rpx;
 }
- 
+
+
 /* 列表商品删除 */
-.list_del{
+
+.list_del {
     position: absolute;
     right: 220rpx;
     bottom: 20rpx;
@@ -110,8 +145,11 @@ bottom: 20rpx;
     text-align: center;
     font-size: 44rpx;
 }
+
+
 /* 固定底部 */
-.cont_bot{
+
+.cont_bot {
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -124,104 +162,133 @@ bottom: 20rpx;
     align-items: center;
     padding-left: 20rpx;
 }
+
 .count_rigth {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
+
+
 /* 全选ICON */
-.total-select{
+
+.total-select {
     width: 40rpx;
     height: 57rpx;
 }
+
+
 /* 全选标题 */
-.sel_count_name{
-  font-size: 30rpx;
-  color: #333;
-  margin-left: 20rpx;
+
+.sel_count_name {
+    font-size: 30rpx;
+    color: #333;
+    margin-left: 20rpx;
 }
- 
+
+
 /* 合计金额 */
-.count_price{
- font-size:28rpx;
- color: #aaa;
- display: flex;
- flex-direction: row;
- padding-top: 15rpx;
+
+.count_price {
+    font-size: 28rpx;
+    color: #aaa;
+    display: flex;
+    flex-direction: row;
+    padding-top: 15rpx;
 }
+
 .countbox {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
-.count_price text{
-  color: #ff5555;
+
+.count_price text {
+    color: #ff5555;
 }
+
 .count_price .yunfei {
-  color:#999;
+    color: #999;
 }
+
+
 /* 购物车为空 */
-.list_none{
-    padding:40rpx 0;
+
+.list_none {
+    padding: 40rpx 0;
     color: #999;
     text-align: center;
 }
+
+
 /* 提交 */
-.submit{
-/* position: absolute; */
-width: 232rpx;
-height: 104rpx;
-line-height: 104rpx;
-margin-left: 20rpx;
-font-size: 30rpx;
-text-align: center;
-color:#fff;
-background-color:#ff5555;
+
+.submit {
+    /* position: absolute; */
+    width: 232rpx;
+    height: 104rpx;
+    line-height: 104rpx;
+    margin-left: 20rpx;
+    font-size: 30rpx;
+    text-align: center;
+    color: #fff;
+    background-color: #ff5555;
 }
-.navigator-hover{
+
+.navigator-hover {
     background: none;
 }
 
- /*加减按钮样式*/
- .stepper{
 
-  width: 200rpx;
-  height: 60rpx;
-  display: flex;
-  text-align: center;
-  float: right;
-  margin-right:40rpx;
-  margin-top:110rpx;
-  border:1px solid #a5a4a4;
+/*加减按钮样式*/
+
+button {
+    padding: 0;
+    margin: 0;
 }
-.stepper button::after{
-border-radius: 0;
+
+.stepper {
+    width: 200rpx;
+    height: 60rpx;
+    display: flex;
+    text-align: center;
+    float: right;
+    margin-right: 40rpx;
+    margin-top: 110rpx;
+    border: 1px solid #a5a4a4;
 }
-.view_text_center{
-  height: 100%;
+
+.stepper button::after {
+    border-radius: 0;
 }
+
+.view_text_center {
+    height: 100%;
+}
+
+
 /*加入购物车弹窗的按钮样式*/
-.normal{
 
-  padding: 0;
-color: #000;
-line-height: 55rpx;
-text-align: center;
-font-size: 50rpx;
-background: #fff;
-border-left: 1px solid #a4a4a4;
-border-right: 0;
-width:160rpx;
-border-radius:0;
+.normal {
+    padding: 0;
+    color: #000;
+    line-height: 55rpx;
+    text-align: center;
+    font-size: 50rpx;
+    background: #fff;
+    border-left: 1px solid #a4a4a4;
+    border-right: 0;
+    width: 160rpx;
+    border-radius: 0;
 }
-.normal2{
-color: #000;
-line-height: 55rpx;
-text-align: center;
-font-size: 50rpx;
-background: #fff;
-border-right: 1px solid #a4a4a4;
-border-left: 0;
-width:160rpx;
-border-radius:0;
-padding: 0;
 
-} 
+.normal2 {
+    color: #000;
+    line-height: 55rpx;
+    text-align: center;
+    font-size: 50rpx;
+    background: #fff;
+    border-right: 1px solid #a4a4a4;
+    border-left: 0;
+    width: 160rpx;
+    border-radius: 0;
+    padding: 0;
+}
