修改了详情页input框和购物车页input框写入值直接计算总价以及数量

--- a/pages/InformationSettings/InformationSettings.wxss
+++ b/pages/InformationSettings/InformationSettings.wxss
@@ -6,7 +6,7 @@
 .weui-select{
   border-right: none;
 }
-.form-cell {
-  padding-left: 30rpx;
-  height: 80rpx;
+.weui-cells{
+  font-size: 28rpx;
+  line-height: 50px;
 }
