--- a/pages/InformationSettings/InformationSettings.wxml
+++ b/pages/InformationSettings/InformationSettings.wxml
@@ -1,51 +1,54 @@
 <!--pages/data/data.wxml-->
 <view class='page'>
-<view class="weui-toptips weui-toptips_warn" wx:if="{{showTopTips}}">{{tipes}}</view>
-  <form bindsubmit="fromsubmit">
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-              <view class="weui-label">姓名</view>
-          </view>
-          <view class="weui-cell__bd">
-              <input class="weui-input username" placeholder="请输入您的名字" name="username" type="text" required="required"/>
-          </view>
-      </view>
-      <view class="weui-cell weui-cell_input weui-cell_vcode">
-          <view class="weui-cell__hd">
-              <view class="weui-label">手机号</view>
-          </view>
-          <view class="weui-cell__bd">
-              <input class="weui-input usertelephone " placeholder="请输入手机号" type="number" name="usertelephone"/>
-          </view>
-      </view>
-      <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-              <view class="weui-label">出生日期</view>
-          </view>
-          <view class="weui-cell__bd">
-              <picker mode="date" value="{{userBirthday}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
-                  <!-- <view class="weui-input">{{date}}</view> -->
-                  <input value='{{userBirthday}}' class='weui-input' name="userBirthday" type="data"></input>
-              </picker>
-          </view>
-      </view>
-      <view class="weui-cell weui-cell_input">
-          <view class="weui-cell__hd">
-              <view class="weui-label">所在城市</view>
-          </view>
-          <view class="weui-cell__bd">
-              <picker bindchange="bindCitiesChange" value="{{city}}" range="{{cities}}">
-                  <input class="weui-input" name="userCity" value='{{city}}'></input>
-              </picker>
-          </view>
-      </view>
-    </view>
-    <view class="weui-btn-area">
-        <button class="weui-btn" type="warn" formType="submit">确定修改</button>
-    </view>
-  </form>
+    <view class="weui-toptips weui-toptips_warn" wx:if="{{showTopTips}}">{{tipes}}</view>
+    <form bindsubmit="fromsubmit">
+        <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_input">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">姓名</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input class="weui-input username" placeholder="请输入您的名字" name="username" type="text" required="required" />
+                </view>
+            </view>
+            <view class="weui-cell weui-cell_input weui-cell_vcode">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">手机号</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input class="weui-input usertelephone " placeholder="请输入手机号" type="number" name="usertelephone" />
+                </view>
+            </view>
+            <view class="weui-cell weui-cell_input">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">出生日期</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <picker mode="date" value="{{userBirthday}}" start="{{startDate}}" end="{{endTime}}" bindchange="bindDateChange">
+                        <view class="weui-input">{{userBirthday}}</view>
+                    </picker>
+                </view>
+            </view>
+            <view class="weui-cell weui-cell_input">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">所在城市</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <picker mode="region" bindchange="bindRegionChange" value="{{region}}" class='form-cell'>
+                        <view class="weui-input">
+                            <view wx:if="{{region.length>0}}">
+                                {{region[0]}}，{{region[1]}}，{{region[2]}}
+                            </view>
+                            <view wx:else>
+                                请选择所在城市
+                            </view>
+                        </view>
+                    </picker>
+                </view>
+            </view>
+        </view>
+        <view class="weui-btn-area">
+            <button class="weui-btn" type="warn" formType="submit">确定修改</button>
+        </view>
+    </form>
 </view>
-
-
-
