--- a/pages/address/address.wxml
+++ b/pages/address/address.wxml
@@ -1,7 +1,7 @@
 <view class="coutainer">
     <view class="addresslist">
         <view class="addressItem" wx:for="{{addressList}}" wx:key="{{index}}" wx:show="{{addressList.length!=0}}">
-            <view class="addressInfo" bindtap="order_address">
+            <view class="addressInfo">
                 <view class="address-cells">
                     <text class="username">{{item.nickname}}</text>
                     <text>{{item.telephone}}</text>
@@ -16,17 +16,16 @@
                 </view>
                 <view class="edtailBtnRight">
                     <navigator url="/pages/edtaileaddress/edtaileaddress?index={{index}}">
-                        <image src="/assets/edtail.png" />
-                        <text>编辑</text>
+                      <image  src="http://eemb.cn/wx/assets/detaile.png"/>
+                      <text>编辑</text>
                     </navigator>
                     <text bindtap="deleteaddress" data-index="{{index}}">删除</text>
                 </view>
             </view>
         </view>
-
     </view>
-    <navigator url="/pages/addAddress/addAddress" class="addAddress">
+    <navigator  url="/pages/addAddress/addAddress" class="addAddress">
         +添加收货地址
     </navigator>
 
-</view>
+</view>  
