--- a/pages/favorite/favorite.wxss
+++ b/pages/favorite/favorite.wxss
@@ -1,1 +1,51 @@
-/* pages/favorite/favorite.wxss */
+.footprintlist{
+  margin:20rpx 20rpx;
+}
+.footprintitem{
+  margin-top: 20rpx;
+  background-color: #fff;
+  padding-left: 20rpx;
+  border-radius: 10rpx;
+  box-shadow: 10rpx 10rpx 10rpx #ddd
+}
+.shoplogo {
+  margin-right: 5px;
+  vertical-align: middle;
+  width:60px;
+  height: 20px;
+}
+.weui-cell{
+  padding-left:0rpx;
+}
+
+.itemlist{
+  display: flex;
+  align-items: center;
+  height: 200rpx;
+}
+.itemlist>image{
+  width: 150rpx;
+  height: 150rpx;
+  margin-right: 20rpx;
+}
+.dedaile{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+.weui-cell {
+  border-bottom:1rpx solid #ddd;
+}
+.title{
+  width: 500rpx;
+  line-height: 17px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+.price{
+  color:#ff5555;
+}
