--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -38,12 +38,12 @@
     border-radius: 50%;
   }
   .usertodo {
+    /* padding:0rpx 20rpx; */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     background-color:#fff;
     height: 150rpx;
-    border-top: 1rpx solid #d9d9d9;
   }
   .usertodo image{
     width: 70rpx;
@@ -59,5 +59,19 @@
     margin-top: 10rpx;
     font-size: 28rpx;
   }
-  .weui-cells:after{bottom:0;border-bottom:none;}
-  .weui-cells:before{top:0;border-top:none}
+  
+.weui-cells:after{bottom:0;border-bottom:none;}
+.weui-cells:before{top:0;border-top:none}
+.weui-cell:before{content:" ";position:absolute;left:0;top:0;right:0;height:1px;border-top:1rpx solid #f3f3f3;color:#d9d9d9;left:15px}
+.order{
+  margin-left: 10px;
+  border-bottom: 1rpx solid #f3f3f3;
+  }
+.borderBox .weui-cell{
+  /* margin-right:10px; */
+  padding-left: 0rpx;
+}
+.weui-cell{
+  /* margin-right:10rpx; */
+}
+
